eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/HTB_Reporting_Month__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The end date of the reporting month.</description>
        <inlineHelpText>The end date of the reporting month.</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>To indicate which environment the data is destined for:
pd      Production
pp      pre-prod
dv      Dev</description>
        <inlineHelpText>To indicate which environment the data is destined for:
pd      Production
pp      pre-prod
dv      Dev</inlineHelpText>
        <label>Environment</label>
        <picklist>
            <picklistValues>
                <fullName>pd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dv</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <description>To indicate which mode the data is intended to represent:
VERIFY  Lender onboarding / XSD change
LIVE	Lender data treated as LIVE</description>
        <inlineHelpText>To indicate which mode the data is intended to represent:
VERIFY  Lender onboarding / XSD change
LIVE	Lender data treated as LIVE</inlineHelpText>
        <label>Mode</label>
        <picklist>
            <picklistValues>
                <fullName>VERIFY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIVE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_Month__c</fullName>
        <description>The reporting month in the format of YYYY-MM.</description>
        <inlineHelpText>The reporting month in the format of YYYY-MM.</inlineHelpText>
        <label>Reporting Month</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <description>The sequence number used by UKARcs to determine the order in which XML documents were generated. This is per Environment and Mode so may not be unique. This should not skip a number or be repeated within an Environment and Mode.</description>
        <inlineHelpText>The sequence number used by UKARcs to determine the order in which XML documents were generated. This is per Environment and Mode so may not be unique. This should not skip a number or be repeated within an Environment and Mode.</inlineHelpText>
        <label>Sequence Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The start date of the reporting month.</description>
        <inlineHelpText>The start date of the reporting month.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of transactions during the reporting month.</description>
        <inlineHelpText>The number of transactions during the reporting month.</inlineHelpText>
        <label>Transaction Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>HTB Reporting Month</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Environment__c</columns>
        <columns>Mode__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>Reporting_Month__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Transaction_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Month Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HTB Reporting Months</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>